--- a/portfolio.html
+++ b/portfolio.html
@@ -203,12 +203,23 @@
                     </li>
                     <li class="footer-socials-item">
                         <a href="" class="footer-socials-link">
-                            <svg class="footer-socials-icon"  width="20px" height="20px">
+                            <svg class="footer-socials-icon" width="20px" height="20px">
                                 <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
                 </ul>
+            </div>
+            <div class="footer-mailing">
+                <form>
+                    <label for="mailing" class="footer-mailing-title">Подпишитесь на рассылку</label>
+                    <input type="email" name="mailing" id="mailing" placeholder="E-mail" class="footer-input">
+                </form> 
+                <button type="submit" class="foter-btn-mailing">Подписаться
+                    <svg class="footer-btn-mailing" wight="24px" height="24px">
+                        <use href="./img/symbol-defs.svg#icon-mailing"></use>
+                    </svg>
+                </button>
             </div>
         </div>
     </footer>
