--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                     <input type="email" name="mailing" id="mailing" placeholder="E-mail" class="footer-input">
                 </form> 
                 <button type="submit" class="foter-btn-mailing">Подписаться
-                    <svg class="footer-btn-mailing" wight="24px" height="24px">
+                    <svg class="footer-btn-mailing" width="24px" height="24px">
                         <use href="./img/symbol-defs.svg#icon-mailing"></use>
                     </svg>
                 </button>
